// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput.vue tests state messages any: should display the correct state message 1`] = `
<div class="stateMsg text-center">

</div>
`;

exports[`SearchInput.vue tests state messages error: should display the correct state message 1`] = `
<div class="stateMsg text-center">
  Error connecting to OpenProject
</div>
`;

exports[`SearchInput.vue tests state messages no-token: should display the correct state message 1`] = `
<div class="stateMsg text-center">
  No OpenProject account connected
</div>
`;

exports[`SearchInput.vue tests work packages multiselect search list should display correct options list of search results 1`] = `
Object {
  "workpackage": Object {
    "assignee": "test",
    "fileId": 1234,
    "id": "1",
    "picture": "/server/index.php/apps/integration_openproject/avatar?userId=1&userName=System",
    "project": "test",
    "projectId": "15",
    "statusCol": "blue",
    "statusTitle": "in-progress",
    "subject": "Organize work-packages",
    "typeCol": "red",
    "typeTitle": "task",
  },
}
`;

exports[`SearchInput.vue tests work packages multiselect search list should not be displayed if the search results is empty 1`] = `
<ul class="multiselect__content" style="display: block;">
  <!---->
  <li style="display: none;"><span class="multiselect__option"><span>No results</span></span></li>
  <li><span class="multiselect__option">
			Start typing to search
		</span></li>
</ul>
`;

exports[`SearchInput.vue tests work packages multiselect search list should only use the options from the latest search response 1`] = `
Object {
  "workpackage": Object {
    "assignee": "some assignee",
    "fileId": 111,
    "id": 1,
    "picture": "http://localhost/apps/integration_openproject/avatar?userId=&userName=some assignee",
    "project": "some project",
    "projectId": "",
    "statusCol": "",
    "statusTitle": "some status",
    "subject": "some subject",
    "typeCol": "",
    "typeTitle": "some type",
  },
}
`;
